fix: intro section overflow on mobile

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -11,6 +11,7 @@
 
 .intro {
   --size-icon : 12.5rem;
+  overflow    : hidden;
   @include mx.desktop() {
 	flex-direction : row-reverse;
   }
